infrastructure/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oem-seller
  labels:
    name: oem-seller
